--- a/project03.ipynb
+++ b/project03.ipynb
@@ -174,8 +174,8 @@
     "    return non_binary_columns\n",
     "\n",
     "non_binary_columns = identify_non_binary_columns(pd.DataFrame(df_X))\n",
-    "print(\"Colunas não binárias:\", non_binary_columns)\n",
-    "print(\"Quantidade:\", len(non_binary_columns))"
+    "print(\"Non Binary Columns:\", non_binary_columns)\n",
+    "print(\"Quantity:\", len(non_binary_columns))"
    ]
   },
   {
@@ -299,13 +299,13 @@
    "source": [
     "column, count = visualizate_binary_distribution(df_X)\n",
     "\n",
-    "# Defina a largura e a altura desejadas da figura\n",
+    "# Define the required width and height of the image \n",
     "fig, ax = plt.subplots(figsize=(20, 6))\n",
     "\n",
-    "# Crie o gráfico de barras\n",
+    "# Create the bar chart\n",
     "ax.bar(column, count, color='blue')\n",
     "\n",
-    "# Adicione rótulos e título\n",
+    "# Adding labels and titles\n",
     "ax.set_xlabel('Columns')\n",
     "ax.set_ylabel('Percentage of Zeros')\n",
     "ax.set_title('Binary Distribution of Zeros in Columns')\n",
