--- a/project03.ipynb
+++ b/project03.ipynb
@@ -727,7 +727,7 @@
     "\n",
     "# Get best params\n",
     "best_params = random_search.best_params_\n",
-    "print(\"Melhores Hiperparâmetros:\", best_params)\n",
+    "print(\"Best Hyperparameters:\", best_params)\n",
     "best_model = random_search.best_estimator_\n",
     "best_preds = best_model.predict(X_test_vali)\n",
     "\n",
